<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="5"
    tools:context="com.example.benjaminfondell.androidui.GridViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="center"
        android:text="@string/num1"
        android:id="@+id/number1"
        android:layout_margin="5dp"
        android:textSize="70sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="center"
        android:text="@string/num2"
        android:id="@+id/number2"
        android:layout_margin="5dp"
        android:textSize="70sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:gravity="center"
        android:text="@string/num3"
        android:id="@+id/number3"
        android:layout_margin="5dp"
        android:textSize="70sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:gravity="center"
        android:text="@string/num4"
        android:id="@+id/number4"
        android:layout_margin="5dp"
        android:textSize="70sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="4"
        android:gravity="center"
        android:text="@string/num5"
        android:id="@+id/number5"
        android:layout_margin="5dp"
        android:textSize="70sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTextPrimaryLight" />




</GridLayout>